Show VM Exception on dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,8 @@
           Your STC Token
         </mat-card-title>
         <mat-card-content>
-            Your Balance = {{ balance }} <br/>
+            Your ETH Balance = {{ ethBalance }}<br/>
+            Your STC Balance = {{ balance }} <br/>
             Your Eth Address = {{ account }}<br/>            
         </mat-card-content>
       </mat-card>   
